force-app/main/default/objects/D2C_SectionTranslations__c/D2C_SectionTranslations__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the translations for the Section Content records</description>
    <label>Section Content Translations</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Content Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>