force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_Brand__c.field-meta.xml
<CustomField>
    <fullName>D2C_Brand__c</fullName>
    <description>The brand for which this content is applicable.</description>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neubau</fullName>
            </value>
            <value>
                <fullName>Silhouette</fullName>
            </value>
            <value>
                <fullName>Evil Eye</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>