force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_Content__c.field-meta.xml
<CustomField>
    <fullName>D2C_Content__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Will relate to the section content record.</description>
    <label>Section Content</label>
    <referenceTo>D2C_SectionContent__c</referenceTo>
    <relationshipLabel>Section Content Translations</relationshipLabel>
    <relationshipName>Section_Content_Translations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>