force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_Country__c.field-meta.xml
<CustomField>
    <fullName>D2C_Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>at</fullName>
                <label>Austria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>