force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_IsActive__c.field-meta.xml
<CustomField>
    <fullName>D2C_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox determines if the content should be shown on the website or not for mentioned SKUs</description>
    <inlineHelpText>True/False</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>