force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_Section_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>D2C_Section_Content_Type__c</fullName>
    <description>This field reflects the record type name of associated section content</description>
    <formula>D2C_Content__r.RecordType.Name</formula>
    <label>Section Content Type</label>
    <type>Text</type>
</CustomField>