force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_TR_ButtonLabel__c.field-meta.xml
<CustomField>
    <fullName>D2C_TR_ButtonLabel__c</fullName>
    <description>This field will determine the translation of  button label</description>
    <label>Section Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>