force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_TR_ButtonLink__c.field-meta.xml
<CustomField>
    <fullName>D2C_TR_ButtonLink__c</fullName>
    <description>This field will determine the button link, if for AT/de we need to redirect to separate link.</description>
    <label>Section Button Link</label>
    <type>Url</type>
</CustomField>