force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_TR_ImageAltText__c.field-meta.xml
<CustomField>
    <fullName>D2C_TR_ImageAltText__c</fullName>
    <description>This field will have the alternate text in case image doesn’t load</description>
    <label>Image Alt Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>