force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_TR_Language__c.field-meta.xml
<CustomField>
    <fullName>D2C_TR_Language__c</fullName>
    <description>This field is used to identify the translation language of current record values</description>
    <label>Translation Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>