force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_TR_SectionHeader__c.field-meta.xml
<CustomField>
    <fullName>D2C_TR_SectionHeader__c</fullName>
    <description>This field will determine the translation of  header of the section.</description>
    <label>Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>