force-app/main/default/objects/D2C_SectionTranslations__c/fields/D2C_TR_SubTitle__c.field-meta.xml
<CustomField>
    <fullName>D2C_TR_SubTitle__c</fullName>
    <description>This field will determine the translation of sub title of the section.</description>
    <label>Section Sub Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>